src/test/ui/error-codes/E0040.stderr
error[E0040]: explicit use of destructor method
  --> $DIR/E0040.rs:16:7
   |
LL |     x.drop();
   |     --^^^^--
   |     | |
   |     | explicit destructor calls not allowed
   |     help: consider using `drop` function: `drop(x)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0040`.
